[gd_scene load_steps=5 format=3 uid="uid://vmf48gd83jhq"]

[ext_resource type="Script" path="res://npcs/creeper/Creeper.gd" id="1_rs1m7"]
[ext_resource type="PackedScene" uid="uid://brwx716xc22gp" path="res://core/health/health.tscn" id="2_vvum0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wbb6"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_1m41k"]
radius = 35.2278

[node name="Creeper" type="CharacterBody2D"]
script = ExtResource("1_rs1m7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.266667, 0.847059, 0.666667, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_0wbb6")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="EngageArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EngageArea"]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_1m41k")

[node name="Health" parent="." instance=ExtResource("2_vvum0")]

[connection signal="body_entered" from="EngageArea" to="." method="_on_engage_area_body_entered"]
[connection signal="body_exited" from="EngageArea" to="." method="_on_engage_area_body_exited"]
[connection signal="depleted" from="Health" to="." method="_on_health_depleted"]
